--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,19 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.0
+  cloud_firestore: ^6.0.0
+  shared_preferences: ^2.5.3
+  encrypt: ^5.0.3
+  crypto: ^3.0.6
+  flutter_local_notifications: ^19.4.0
+  timezone: ^0.10.1
+  android_intent_plus: ^5.3.0
+  stream_chat_flutter: ^9.15.0
+  stream_chat_flutter_core: ^9.15.0
+  stream_chat: ^9.15.0
+  cloud_functions: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
