docs: Expand README with detailed project overview, features, tech stack, and update gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+SynerSched - Project Proposal(A04327619).pdf
+SynerSched Project Report.pdf
